--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "node src/server.js",
+    "start": "npm run build && node src/server.js",
     "start:dev": "npm run build && nodemon src/server.js"
   },
   "repository": {
